feat(experience): add experience module

--- a/angular.json
+++ b/angular.json
@@ -149,6 +149,68 @@
           "styleext": "scss"
         }
       }
+    },
+    "experience-interface": {
+      "projectType": "library",
+      "root": "libs/experience-interface",
+      "sourceRoot": "libs/experience-interface/src",
+      "prefix": "cv",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/experience-interface/tsconfig.lib.json",
+              "libs/experience-interface/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/experience-interface/jest.config.js",
+            "tsConfig": "libs/experience-interface/tsconfig.spec.json",
+            "setupFile": "libs/experience-interface/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "styleext": "scss"
+        }
+      }
+    },
+    "experience-ui": {
+      "projectType": "library",
+      "root": "libs/experience-ui",
+      "sourceRoot": "libs/experience-ui/src",
+      "prefix": "cv",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/experience-ui/tsconfig.lib.json",
+              "libs/experience-ui/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/experience-ui/jest.config.js",
+            "tsConfig": "libs/experience-ui/tsconfig.spec.json",
+            "setupFile": "libs/experience-ui/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "styleext": "scss"
+        }
+      }
     }
   },
   "cli": {
