--- a/nx.json
+++ b/nx.json
@@ -16,6 +16,12 @@
     },
     "template-ui": {
       "tags": []
+    },
+    "experience-interface": {
+      "tags": []
+    },
+    "experience-ui": {
+      "tags": []
     }
   }
 }
