--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "ng test --passWithNoTests",
     "lint": "nx lint && ng lint",
     "e2e": "ng e2e",
+    "sonar-scanner": "node_modules/sonar-scanner/bin/sonar-scanner",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -29,20 +30,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.1",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
     "@angular/core": "^8.0.0",
     "@angular/forms": "^8.0.0",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@nrwl/angular": "8.1.0",
     "core-js": "^2.5.4",
+    "ngx-md": "^8.0.0",
     "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
-    "@nrwl/angular": "8.1.0"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "jest-preset-angular": "^7.1.1",
     "@angular-devkit/build-angular": "^0.800.0",
     "@angular/cli": "8.0.0",
     "@angular/compiler-cli": "^8.0.0",
@@ -57,7 +60,9 @@
     "cypress": "~3.3.1",
     "dotenv": "6.2.0",
     "jest": "24.1.0",
+    "jest-preset-angular": "^7.1.1",
     "prettier": "1.16.4",
+    "sonar-scanner": "^3.1.0",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
