chore(ci): add sonar analysis

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,9 +32,14 @@ lint_job:
   stage: test
   script: npm run lint
 
-sonar_job:
+sonarqube-reports:
   stage: quality
-  script: npm run sonar-scanner
+  image: ciricihq/gitlab-sonar-scanner
+  variables:
+    SONAR_URL: https://sonarcloud.io
+    SONAR_ANALYSIS_MODE: publish
+  script:
+    - gitlab-sonar-scanner -Dsonar.login=$SONAR_LOGIN
 
 build_job:
   stage: build
