--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,7 +16,7 @@ sonar.test.inclusions=**/*.spec.ts
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
-sonar.login=8776486660564ad1189fe7629c00271370201327
+#sonar.login=8776486660564ad1189fe7629c00271370201327
 
 #sonar.javascript.lcov.reportPaths=./coverage/apps/curriculum-vitae/lcov.info,./coverage/libs/experience-ui/lcov.info,./coverage/libs/template-ui/lcov.info
 sonar.typescript.lcov.reportPaths=coverage/apps/curriculum-vitae/lcov.info,coverage/libs/experience-ui/lcov.info,coverage/libs/template-ui/lcov.info
