--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "curriculum-vitae",
-  "version": "0.1.0-DEV",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
