chore: update to angular 10

--- a/angular.json
+++ b/angular.json
@@ -83,15 +83,14 @@
               "apps/curriculum-vitae/tsconfig.app.json",
               "apps/curriculum-vitae/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": ["**/node_modules/**", "!apps/curriculum-vitae/**/*"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "apps/curriculum-vitae/jest.config.js",
-            "tsConfig": "apps/curriculum-vitae/tsconfig.spec.json",
-            "setupFile": "apps/curriculum-vitae/src/test-setup.ts"
+            "passWithNoTests": true
           }
         }
       }
@@ -117,7 +116,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "apps/curriculum-vitae-e2e/tsconfig.e2e.json"
+            "tsConfig": "apps/curriculum-vitae-e2e/tsconfig.e2e.json",
+            "exclude": ["!apps/curriculum-vitae-e2e/**/*"]
           }
         }
       }
@@ -135,15 +135,14 @@
               "libs/template-ui/tsconfig.lib.json",
               "libs/template-ui/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": ["**/node_modules/**", "!libs/template-ui/**/*"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "libs/template-ui/jest.config.js",
-            "tsConfig": "libs/template-ui/tsconfig.spec.json",
-            "setupFile": "libs/template-ui/src/test-setup.ts"
+            "passWithNoTests": true
           }
         }
       },
@@ -166,15 +165,14 @@
               "libs/experience-interface/tsconfig.lib.json",
               "libs/experience-interface/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": ["**/node_modules/**", "!libs/experience-interface/**/*"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "libs/experience-interface/jest.config.js",
-            "tsConfig": "libs/experience-interface/tsconfig.spec.json",
-            "setupFile": "libs/experience-interface/src/test-setup.ts"
+            "passWithNoTests": true
           }
         }
       },
@@ -197,15 +195,14 @@
               "libs/experience-ui/tsconfig.lib.json",
               "libs/experience-ui/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": ["**/node_modules/**", "!libs/experience-ui/**/*"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "libs/experience-ui/jest.config.js",
-            "tsConfig": "libs/experience-ui/tsconfig.spec.json",
-            "setupFile": "libs/experience-ui/src/test-setup.ts"
+            "passWithNoTests": true
           }
         }
       },
