--- a/nx.json
+++ b/nx.json
@@ -3,13 +3,14 @@
   "implicitDependencies": {
     "angular.json": "*",
     "package.json": "*",
-    "tsconfig.json": "*",
     "tslint.json": "*",
-    "nx.json": "*"
+    "nx.json": "*",
+    "tsconfig.base.json": "*"
   },
   "projects": {
     "curriculum-vitae-e2e": {
-      "tags": []
+      "tags": [],
+      "implicitDependencies": ["curriculum-vitae"]
     },
     "curriculum-vitae": {
       "tags": []
@@ -23,5 +24,16 @@
     "experience-ui": {
       "tags": []
     }
+  },
+  "tasksRunnerOptions": {
+    "default": {
+      "runner": "@nrwl/workspace/tasks-runners/default",
+      "options": {
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
+      }
+    }
+  },
+  "affected": {
+    "defaultBase": "master"
   }
 }
